--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,12 @@ bin-release/
 *.ipa
 *.apk
 
+
+*.Rproj
+*.Rproj.user*
+*.RData
+*.RHistory
+.DS_Store
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
